--- a/cucumber-cli/build.gradle
+++ b/cucumber-cli/build.gradle
@@ -18,7 +18,9 @@ test {
     dependsOn assemble, testClasses
     systemProperties System.properties
     doLast {
+        def tmpJvmArgs = new ArrayList(jvmArgs)
         javaexec {
+            jvmArgs = tmpJvmArgs
             def tags = System.getProperty("cucumber.filter.tags") ?: null
             main = "io.cucumber.core.cli.Main"
             classpath = configurations.cucumberRuntime + sourceSets.main.output + sourceSets.test.output
