add junit report for cucumber-cli

--- a/cucumber-cli/build.gradle
+++ b/cucumber-cli/build.gradle
@@ -24,7 +24,8 @@ test {
             def tags = System.getProperty("cucumber.filter.tags") ?: null
             main = "io.cucumber.core.cli.Main"
             classpath = configurations.cucumberRuntime + sourceSets.main.output + sourceSets.test.output
-            args += ['--strict', '--glue', 'com.epam.drill', 'cucumber-cli/src/test/resources/com.epam.drill', '--tags', tags]
+            args += ['--strict', '--glue', 'com.epam.drill', 'cucumber-cli/src/test/resources/com.epam.drill',
+                     '--tags', tags, '--plugin', 'junit:build/test-results/test/cucumber-results.xml']
         }
     }
 }
