--- a/build.gradle
+++ b/build.gradle
@@ -32,8 +32,8 @@ allprojects {
         adminPort = System.getProperty("adminPort") ?: 8090
         logLevel = com.epam.drill.agent.runner.LogLevels.TRACE
         additionalParams =
-//                ["browserProxyAddress": "$adminHost:7777",
-                [ "rawFrameworkPlugins": "$testFramework"
+                ["browserProxyAddress": "$adminHost:7777",
+                 "rawFrameworkPlugins": "$testFramework"
                 ]
         logFile = file("build/drill-autotest.log")
 
