--- a/build.gradle
+++ b/build.gradle
@@ -25,16 +25,16 @@ allprojects {
     drill {
         jvmArgs = ["-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5009"]
         def testFramework = System.getProperty("testFramework") ?: ""
-        version = System.getProperty("autotestAgentVersion") ?: "0.16.12"
+        version = System.getProperty("autotestAgentVersion") ?: "0.16.9"
         agentId = System.getProperty("agentId") ?: null
         groupId = System.getProperty("groupId") ?: null
         adminHost = System.getProperty("adminHost") ?: "localhost"
         adminPort = System.getProperty("adminPort") ?: 8090
         logLevel = com.epam.drill.agent.runner.LogLevels.TRACE
-        additionalParams =
-                ["browserProxyAddress": "$adminHost:7777",
-                 "rawFrameworkPlugins": "$testFramework"
-                ]
+//        additionalParams =
+//                ["browserProxyAddress": "$adminHost:7777",
+//                 "rawFrameworkPlugins": "$testFramework"
+//                ]
         logFile = file("build/drill-autotest.log")
 
     }
