--- a/build.gradle
+++ b/build.gradle
@@ -31,10 +31,10 @@ allprojects {
         adminHost = System.getProperty("adminHost") ?: "localhost"
         adminPort = System.getProperty("adminPort") ?: 8090
         logLevel = com.epam.drill.agent.runner.LogLevels.TRACE
-//        additionalParams =
-//                ["browserProxyAddress": "$adminHost:7777",
-//                 "rawFrameworkPlugins": "$testFramework"
-//                ]
+        additionalParams =
+                ["browserProxyAddress": "$adminHost:7777",
+                 "rawFrameworkPlugins": "$testFramework"
+                ]
         logFile = file("build/drill-autotest.log")
 
     }
